--- a/style.css
+++ b/style.css
@@ -39,13 +39,12 @@ header {
   position: absolute;
   background-color: white;
   color: black;
-  width: 200px;
-  height: 100px;
+  width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
 
-  font-size: 42px;
+  font-size: 96px;
   bottom: 0%;
   left: 50%;
   transform: translate(-50%, 50%);
@@ -54,7 +53,8 @@ header {
 /* Check Number Section */
 main {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 200px;
 }
 .check-number .btn {
   margin: 30px 50px;
@@ -70,15 +70,23 @@ main {
   font-size: 50px;
   display: block;
 }
+.your-number:focus {
+  outline: none;
+}
 
 /* Stats section */
+.check-number,
+.stats {
+  flex: 0 0 200px;
+}
 .stats {
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 .message {
-  font-size: 40px;
+  font-size: 32px;
+  overflow-wrap: break-word;
 }
 
 .label-score,
