--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ header {
   height: 35vh;
   position: relative;
   margin-bottom: 100px;
+  @media (max-width: 425px) {
+    height: 45vh;
+  }
 }
 .btn {
   width: 100px;
@@ -55,9 +58,23 @@ main {
   display: flex;
   justify-content: center;
   gap: 200px;
+  @media (max-width: 425px) {
+    flex-direction: column;
+    gap: 0px;
+  }
+}
+.check-number {
+  @media (max-width: 425px) {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+  }
 }
 .check-number .btn {
   margin: 30px 50px;
+  @media (max-width: 425px) {
+    margin: 0;
+  }
 }
 .your-number {
   width: 200px;
@@ -69,6 +86,11 @@ main {
   font-family: 'Jersey 10', sans-serif;
   font-size: 50px;
   padding: 2px;
+  @media (max-width: 425px) {
+    width: 100px;
+    height: 50px;
+    font-size: 40px;
+  }
 }
 .your-number:focus {
   outline: none;
@@ -81,11 +103,18 @@ input[type='number']::-webkit-outer-spin-button {
 .check-number,
 .stats {
   flex: 0 0 200px;
+  @media (max-width: 425px) {
+    flex: 0;
+  }
 }
 .stats {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  @media (max-width: 425px) {
+    margin-top: 20px;
+    align-items: center;
+  }
 }
 .message {
   font-size: 32px;
